// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddGroup should open modal with auditEnabled switch 1`] = `
.emotion-0 {
  text-align: left;
  font: 300 14px HelveticaNeue-Reg,Helvetica,Arial,sans-serif;
  padding-bottom: 15px;
  max-height: auto;
  overflow-y: scroll;
}

.emotion-2 {
  width: 780px;
  text-align: left;
  background-color: #fff;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 10px 10px;
}

.emotion-6 {
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-7 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  width: 17%;
}

.emotion-9 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  margin-right: 10px;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 100%;
}

.emotion-11 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-11.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-11 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input.focused,
.emotion-11 input:active,
.emotion-11 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-11 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-11 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-11.error input,
.emotion-11.error input.focused,
.emotion-11.error input:active,
.emotion-11.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-11.error .message {
  color: #d01111;
}

.emotion-12 {
  width: 500px;
}

.emotion-17 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  width: 17%;
  padding-top: 5px;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  margin-top: 5px;
}

.emotion-26 {
  margin-left: 10px;
}

.emotion-28 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px transparent inset,0 0 0 0 #d5d5d5 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  box-shadow: 0 0 0 1px #3697f2 inset;
  color: #3697f2;
}

.emotion-28:first-of-type {
  margin-left: 0;
}

.emotion-28:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-28:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-28:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-29 {
  width: 125px;
}

.emotion-36 {
  width: 65%;
}

.emotion-45 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 250px;
}

.emotion-45 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-45.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-45 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-45 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-45 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-45 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-45 input.focused,
.emotion-45 input:active,
.emotion-45 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-45 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-45 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-45.error input,
.emotion-45.error input.focused,
.emotion-45.error input:active,
.emotion-45.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-45.error .message {
  color: #d01111;
}

.emotion-50 {
  vertical-align: middle;
}

.emotion-52 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 18px;
  outline: 0;
  position: relative;
}

.emotion-52>input[type='checkbox'] {
  box-sizing: border-box;
  cursor: pointer;
  position: absolute;
  top: 0;
  visibility: hidden;
}

.emotion-52>input[type='checkbox']+label {
  box-sizing: border-box;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  height: 18px;
  line-height: 18px;
  white-space: nowrap;
}

.emotion-52>input[type='checkbox']+label .label-content {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 6px;
}

@-moz-document url-prefix() {
  .emotion-52>input[type='checkbox']+label .label-content {
    margin-top: 1px;
  }
}

.emotion-52>input[type='checkbox']+label:before {
  background: #d5d5d5;
  border-radius: 9px;
  box-sizing: border-box;
  content: '';
  cursor: pointer;
  display: inline-block;
  height: 4px;
  line-height: 16px;
  margin: 7px 0 0 0;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  vertical-align: top;
  width: 34px;
}

.emotion-52>input[type='checkbox']+label::after {
  background-color: #fff;
  border: 2px solid rgba(54,151,242,0.5);
  border-radius: 50%;
  box-sizing: border-box;
  content: ' ';
  cursor: pointer;
  display: block;
  height: 18px;
  left: 0;
  position: absolute;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  top: 0;
  width: 18px;
}

.emotion-52>input[type='checkbox']:checked+label::before {
  background-color: rgba(21,192,70,0.45);
}

.emotion-52>input[type='checkbox']:checked+label::after {
  background-color: #15c046;
  border-color: #15c046;
  left: 16px;
}

.emotion-52>input[type='checkbox']:disabled+label {
  color: #9a9a9a;
  cursor: not-allowed;
}

.emotion-52>input[type='checkbox']:disabled+label::before {
  background-color: #e8e8e8;
  cursor: not-allowed;
}

.emotion-52>input[type='checkbox']:disabled+label::after {
  border-color: #d5d5d5;
  cursor: not-allowed;
}

.emotion-52>input[type='checkbox']:checked:disabled+label::after {
  background: #d5d5d5;
}

.emotion-53 {
  color: #9a9a9a;
  margin-left: 5px;
  white-space: nowrap;
  font: 300 14px HelveticaNeue-Reg,Helvetica,Arial,sans-serif;
}

<div
  class="emotion-0 emotion-1"
  data-testid="add-modal-message"
  height="auto"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <label
        class="emotion-6 denali-input-label emotion-7 emotion-8"
      >
        Group Name
      </label>
      <div
        class="emotion-9 emotion-10"
      >
        <div
          class="emotion-11 denali-input emotion-12 emotion-13"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            placeholder="Enter New Group Name"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <label
        class="emotion-6 denali-input-label emotion-17 emotion-18"
      >
        Add Member(s)
      </label>
      <div
        class="emotion-9 emotion-10"
      >
        <div
          class="emotion-21 emotion-22"
        >
          <div
            class="emotion-11 denali-input emotion-24 emotion-25"
            data-testid="input-wrapper"
          >
            <input
              autocomplete="off"
              data-testid="input-node"
              placeholder="user.<userid> or <domain>.<service>"
              value=""
            />
            <div
              class="message"
              data-testid="message"
            />
          </div>
          <div
            class="emotion-26 emotion-27"
          >
            <button
              class="emotion-28 denali-button emotion-29 emotion-30"
            >
              Add
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <label
        class="emotion-6 denali-input-label emotion-7 emotion-8"
      />
      <div
        class="emotion-36 emotion-37"
      />
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <label
        class="emotion-6 denali-input-label emotion-7 emotion-8"
      >
        Justification
      </label>
      <div
        class="emotion-9 emotion-10"
      >
        <div
          class="emotion-45 denali-input animated emotion-12 emotion-13"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="justification"
            name="justification"
            placeholder="Enter justification here"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-50 emotion-51"
      >
        <div
          class="emotion-52 denali-switch"
          data-testid="switch-wrapper"
        >
          <input
            data-testid="auditEnabled-switch-input"
            id="switch-auditEnabled"
            name="auditEnabled"
            type="checkbox"
          />
          <label
            for="switch-auditEnabled"
          />
        </div>
        <label
          class="emotion-53 emotion-54"
        >
          Audit Enabled
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddGroup should open modal without auditEnabled switch 1`] = `
.emotion-0 {
  text-align: left;
  font: 300 14px HelveticaNeue-Reg,Helvetica,Arial,sans-serif;
  padding-bottom: 15px;
  max-height: auto;
  overflow-y: scroll;
}

.emotion-2 {
  width: 780px;
  text-align: left;
  background-color: #fff;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 10px 10px;
}

.emotion-6 {
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-7 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  width: 17%;
}

.emotion-9 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  margin-right: 10px;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 100%;
}

.emotion-11 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-11.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-11 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-11 input.focused,
.emotion-11 input:active,
.emotion-11 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-11 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-11 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-11.error input,
.emotion-11.error input.focused,
.emotion-11.error input:active,
.emotion-11.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-11.error .message {
  color: #d01111;
}

.emotion-12 {
  width: 500px;
}

.emotion-17 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  width: 17%;
  padding-top: 5px;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  margin-top: 5px;
}

.emotion-26 {
  margin-left: 10px;
}

.emotion-28 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px transparent inset,0 0 0 0 #d5d5d5 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  box-shadow: 0 0 0 1px #3697f2 inset;
  color: #3697f2;
}

.emotion-28:first-of-type {
  margin-left: 0;
}

.emotion-28:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-28:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-28:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-29 {
  width: 125px;
}

.emotion-36 {
  width: 65%;
}

<div
  class="emotion-0 emotion-1"
  data-testid="add-modal-message"
  height="auto"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <label
        class="emotion-6 denali-input-label emotion-7 emotion-8"
      >
        Group Name
      </label>
      <div
        class="emotion-9 emotion-10"
      >
        <div
          class="emotion-11 denali-input emotion-12 emotion-13"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            placeholder="Enter New Group Name"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <label
        class="emotion-6 denali-input-label emotion-17 emotion-18"
      >
        Add Member(s)
      </label>
      <div
        class="emotion-9 emotion-10"
      >
        <div
          class="emotion-21 emotion-22"
        >
          <div
            class="emotion-11 denali-input emotion-24 emotion-25"
            data-testid="input-wrapper"
          >
            <input
              autocomplete="off"
              data-testid="input-node"
              placeholder="user.<userid> or <domain>.<service>"
              value=""
            />
            <div
              class="message"
              data-testid="message"
            />
          </div>
          <div
            class="emotion-26 emotion-27"
          >
            <button
              class="emotion-28 denali-button emotion-29 emotion-30"
            >
              Add
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <label
        class="emotion-6 denali-input-label emotion-7 emotion-8"
      />
      <div
        class="emotion-36 emotion-37"
      />
    </div>
  </div>
</div>
`;

exports[`AddGroup should render 1`] = `
<div
  data-testid="add-group"
/>
`;
